--- a/Web-Application/templates/dashboard/Book.html
+++ b/Web-Application/templates/dashboard/Book.html
@@ -961,9 +961,9 @@
 					<i class="material-icons">more_vert</i>
 				</button>
 				<ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-					<li class="mdl-menu__item">About</li>
+					<!-- <li class="mdl-menu__item">About</li>
 					<li class="mdl-menu__item">Contact</li>
-					<li class="mdl-menu__item">Legal information</li>
+					<li class="mdl-menu__item">Legal information</li> -->
 					<li class="mdl-menu__item" id="logout">Logout</li>
 				</ul>
 			</div>
