--- a/Web-Application/templates/LoginRegistrationForm/index.html
+++ b/Web-Application/templates/LoginRegistrationForm/index.html
@@ -94,10 +94,10 @@
                                 <label for="password" class="youpasswd" data-icon="p"> Your password </label>
                                 <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" /> 
                             </p>
-                            <p class="keeplogin"> 
+                            <!-- <p class="keeplogin"> 
                                <input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
                                <label for="loginkeeping">Keep me logged in</label>
-                           </p>
+                           </p> -->
                            <p class="login button"> 
                             <input type="submit" value="Login"  id = "getlogin"/> 
                         </p>
