--- a/Web-Application/templates/dashboard/search.html
+++ b/Web-Application/templates/dashboard/search.html
@@ -420,33 +420,48 @@
 
 				$("#logout").click(function(){
 
-					$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
-						console.log(data["status"]);
-						if (data["status"] == true) {
-							window.location.href = "../LoginRegistrationForm/index.html";
-						}
-						else{
-							alert("Cannot logout");
-							window.location.href = "index.html";
-						}
-					});
-
+				$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
+					console.log(data["status"]);
+					var i1 = sessionStorage.length;
+					while(i1--) {
+						var key = sessionStorage.key(i1);
+						if(key) {
+							sessionStorage.removeItem(key);
+						}  
+					}
+					if (data["status"] == true) {
+						window.location.href = "../LoginRegistrationForm/index.html";
+					}
+					else{
+						alert("Cannot logout");
+						window.location.href = "index.html";
+					}
 				});
 
-				$("#navlogout").click(function(){
+			});
 
-					$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
-						console.log(data["status"]);
-						if (data["status"] == true) {
-							window.location.href = "../LoginRegistrationForm/index.html";
-						}
-						else{
-							alert("Cannot logout");
-							window.location.href = "index.html";
-						}
-					});
+			$("#navlogout").click(function(){
 
+				$.get("http://10.130.10.35:8080/DBProject/Logout", function(data, status){
+					console.log(data["status"]);
+					var i1 = sessionStorage.length;
+					while(i1--) {
+						var key = sessionStorage.key(i1);
+						if(key) {
+							sessionStorage.removeItem(key);
+						}  
+					}
+					if (data["status"] == true) {
+						window.location.href = "../LoginRegistrationForm/index.html";
+					}
+					else{
+						alert("Cannot logout");
+						window.location.href = "index.html";
+					}
 				});
+
+			});
+
 			
 			}
 		});
